[tool.poetry]
name = "maker-chief"
version = "0.1.2"
description = "tally makerdao governance votes"
authors = ["banteg <banteeg@gmail.com>"]
license = "MIT"
homepage = "https://github.com/banteg/maker-chief"
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
requests = "^2.21"
eth-utils = "^1.4"
eth-abi = "^1.3"
web3 = "^4.9"
appdirs = "^1.4"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
maker-chief = 'maker_chief:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
